--- a/pages/blog/solving-my-margin-headache.mdx
+++ b/pages/blog/solving-my-margin-headache.mdx
@@ -4,7 +4,8 @@ export const meta = {
   published: true,
   date: `2018-01-06`,
   title: `Solving my margin headache`,
-  summary: `An approach to dealing with margin between text elements in CSS.`
+  summary: `An approach to dealing with margin between text elements in CSS.`,
+  url: `/solving-my-margin-headache`
 };
 
 export default Post;
