--- a/pages/blog/an-adventure-in-image-zooming.mdx
+++ b/pages/blog/an-adventure-in-image-zooming.mdx
@@ -4,7 +4,8 @@ export const meta = {
   published: true,
   date: `2017-10-09`,
   title: `An adventure in image zooming`,
-  summary: `Learn how to use Zoom.js.`
+  summary: `Learn how to use Zoom.js.`,
+  url: `/an-adventure-in-image-zooming`
 };
 
 export default Post;
