Update post image location

--- a/pages/blog/consider-using-system-fonts.mdx
+++ b/pages/blog/consider-using-system-fonts.mdx
@@ -1,7 +1,7 @@
 import Post from "../../components/post";
 
 export const meta = {
-  published: true,
+  isPublished: true,
   date: `2017-07-16`,
   title: `Consider using system fonts`,
   summary: `Next time you find yourself reaching for Google Fonts or Typekit, stop for a
