--- a/pages/blog/keep-your-css-cool-with-csscomb.mdx
+++ b/pages/blog/keep-your-css-cool-with-csscomb.mdx
@@ -1,7 +1,7 @@
 import Post from "../../components/post";
 
 export const meta = {
-  published: true,
+  isPublished: true,
   date: `2018-01-09`,
   title: `Keep your CSS cool with CSScomb`,
   summary: `How to use CSScomb to keep your CSS clean and consistent.`,
@@ -20,7 +20,7 @@ _Note: I use VS Code on macOS. However, these same principles apply to other tex
 
 Installing CSScomb is very easy. See below.
 
-![How to Install CSScomb](/static/images/keep-your-css-cool-with-csscomb-install-csscomb.gif)
+![How to Install CSScomb](/static/images/keep-your-css-cool-with-csscomb/install.gif)
 
 ## Create a custom config file
 
@@ -43,6 +43,6 @@ Now, let's put this file to use:
 
 Open the command palette by navigating to **View** > **Command Palette...** or press `Shift` + `⌘` + `P`. In the command palette window, type `format` and click **CSSComb: Format Styles**.
 
-![How to Use CSScomb](/static/images/keep-your-css-cool-with-csscomb-use-csscomb.gif)
+![How to Use CSScomb](/static/images/keep-your-css-cool-with-csscomb/example.gif)
 
 There you have it! If you anything is unclear or you just want to say hey, shoot me a message on Twitter ([@tayl_rbryant](https://twitter.com/tayl_rbryant)).
