--- a/pages/blog/an-adventure-in-image-zooming.mdx
+++ b/pages/blog/an-adventure-in-image-zooming.mdx
@@ -1,7 +1,7 @@
 import Post from "../../components/post";
 
 export const meta = {
-  published: true,
+  isPublished: true,
   date: `2017-10-09`,
   title: `An adventure in image zooming`,
   summary: `Learn how to use Zoom.js.`,
@@ -18,7 +18,7 @@ Zoom.js is a jQuery plugin built by [@fat](https://github.com/fat), a developer 
 
 You can see Zoom.js in action below.
 
-![Zoom.js Example](/static/images/an-adventure-in-image-zooming-example.gif)
+![Zoom.js Example](/static/images/an-adventure-in-image-zooming/example.gif)
 
 ## mehQuery
 
