--- a/pages/blog/css-stats-bookmarklet.mdx
+++ b/pages/blog/css-stats-bookmarklet.mdx
@@ -1,7 +1,7 @@
 import Post from "../../components/post";
 
 export const meta = {
-  published: true,
+  isPublished: true,
   date: `2017-09-21`,
   title: `CSS Stats Bookmarklet`,
   summary: `CSS Stats is a useful tool for getting a bird's eye view of the state of your
