--- a/pages/blog/solving-my-margin-headache.mdx
+++ b/pages/blog/solving-my-margin-headache.mdx
@@ -1,7 +1,7 @@
 import Post from "../../components/post";
 
 export const meta = {
-  published: true,
+  isPublished: true,
   date: `2018-01-06`,
   title: `Solving my margin headache`,
   summary: `An approach to dealing with margin between text elements in CSS.`,
