Remove punctuation from post summaries

--- a/pages/blog/an-adventure-in-image-zooming.mdx
+++ b/pages/blog/an-adventure-in-image-zooming.mdx
@@ -4,7 +4,7 @@ export const meta = {
   isPublished: true,
   date: `2017-10-09`,
   title: `An adventure in image zooming`,
-  summary: `Learn how to use Zoom.js.`,
+  summary: `Learn how to use Zoom.js`,
   url: `/an-adventure-in-image-zooming`
 };
 
