--- a/pages/blog/css-stats-bookmarklet.mdx
+++ b/pages/blog/css-stats-bookmarklet.mdx
@@ -5,7 +5,7 @@ export const meta = {
   date: `2017-09-21`,
   title: `CSS Stats Bookmarklet`,
   summary: `CSS Stats is a useful tool for getting a bird's eye view of the state of your
-  website's CSS.`,
+  website's CSS`,
   url: `/css-stats-bookmarklet`
 };
 
