--- a/pages/blog/keep-your-css-cool-with-csscomb.mdx
+++ b/pages/blog/keep-your-css-cool-with-csscomb.mdx
@@ -4,7 +4,7 @@ export const meta = {
   isPublished: true,
   date: `2018-01-09`,
   title: `Keep your CSS cool with CSScomb`,
-  summary: `How to use CSScomb to keep your CSS clean and consistent.`,
+  summary: `How to use CSScomb to keep your CSS clean and consistent`,
   url: `/keep-your-css-cool-with-csscomb`
 };
 
