Add syntax highlighting

--- a/pages/blog/css-stats-bookmarklet.mdx
+++ b/pages/blog/css-stats-bookmarklet.mdx
@@ -9,13 +9,13 @@ export const meta = {
   url: `/css-stats-bookmarklet`
 };
 
-export default Post
+export default Post;
 
 [CSS Stats](http://cssstats.com) is a useful tool for getting a bird's eye view of the state of your website's CSS. By itself, it isn't anything particularly groundbreaking, but using the information it provides, you can get a feel for the quality of the CSS you have written.
 
 ## Bookmarklet
 
-I made a nifty little bookmarklet that runs the current page through CSS Stats using the default user agent. To use it, drag <a href="javascript:location.href='http://cssstats.com/stats?url='+window.location.href+'&ua=Browser Default'" title="CSS Stats">`CSS Stats`</a> to your bookmarks bar or use the code snippet below to create the bookmark manually.
+I made a nifty little bookmarklet that runs the current page through CSS Stats using the default user agent. To use it, create a bookmark that contains the code snippet below.
 
 ```javascript
 javascript: location.href =
