--- a/pages/blog/move-files-to-the-root-of-a-nextjs-project.mdx
+++ b/pages/blog/move-files-to-the-root-of-a-nextjs-project.mdx
@@ -27,9 +27,7 @@ Promise.all(
   )
 ).then(fileNames =>
   console.log(
-    `The following files in were copied to './out': ${JSON.stringify(
-      fileNames
-    )}`
+    `The following files were copied to './out': ${JSON.stringify(fileNames)}`
   )
 );
 ```
