Remove code snippet from heading

--- a/pages/blog/move-files-to-the-root-of-a-nextjs-project.mdx
+++ b/pages/blog/move-files-to-the-root-of-a-nextjs-project.mdx
@@ -32,7 +32,7 @@ Promise.all(
 );
 ```
 
-## Add a script to your `package.json`
+## Add a script to your package.json
 
 Add a script to your `package.json`. I called it `post-export`, but you can call it whatever you like.
 
