--- a/pages/blog/move-files-to-the-root-of-a-nextjs-project.mdx
+++ b/pages/blog/move-files-to-the-root-of-a-nextjs-project.mdx
@@ -10,6 +10,8 @@ export const meta = {
 
 export default Post;
 
+*Update: As of [v9.1](https://nextjs.org/blog/next-9-1), Next.js supports a `public` folder to define files to be mounted at the root of your application*
+
 [Next.js](https://nextjs.org) is a framework built by [ZEIT](https://zeit.co) that allows you to easily build server-side rendered React applications. It provides automatic code splitting, simple client-side routing, and hot code reloading out of the box.
 
 By default, Next.js only sets up routes based on files in the `./pages` and `./static` directories. This is sufficient in most cases, but Next.js doesn't provide a simple way to expose files like favicons or a sitemap at the root of your app. Keep reading for a simple way to move your files to the root of a Next.js project.
