Move pages, components, and css into src directory

--- a/src/pages/blog/move-files-to-the-root-of-a-nextjs-project.mdx
+++ b/src/pages/blog/move-files-to-the-root-of-a-nextjs-project.mdx
@@ -10,7 +10,7 @@ export const meta = {
 
 export default Post;
 
-*Update: As of [v9.1](https://nextjs.org/blog/next-9-1), Next.js supports a `public` folder to define files to be mounted at the root of your application*
+_Update: As of [v9.1](https://nextjs.org/blog/next-9-1), Next.js supports a `public` folder to define files to be mounted at the root of your application_
 
 [Next.js](https://nextjs.org) is a framework built by [ZEIT](https://zeit.co) that allows you to easily build server-side rendered React applications. It provides automatic code splitting, simple client-side routing, and hot code reloading out of the box.
 
