Remove unused deps

--- a/src/pages/blog/an-adventure-in-image-zooming.mdx
+++ b/src/pages/blog/an-adventure-in-image-zooming.mdx
@@ -1,4 +1,4 @@
-import Post from "../../components/post";
+import PostPageLayout from "../../components/post-page-layout-page-layout";
 
 export const meta = {
   isPublished: true,
@@ -8,7 +8,7 @@ export const meta = {
   url: `/an-adventure-in-image-zooming`
 };
 
-export default Post;
+export default PostPageLayout;
 
 I recently decided to implement an image zooming feature on this blog. At first, I considered using Lightbox, a classic JavaScript library that overlays images on top of the current page. Before commiting to Lightbox, I decided to have a look around the web for alternatives. That's when I stumbled across [Zoom.js](https://github.com/fat/zoom.js/).
 
