--- a/src/pages/blog/consider-using-system-fonts.mdx
+++ b/src/pages/blog/consider-using-system-fonts.mdx
@@ -1,4 +1,4 @@
-import Post from "../../components/post";
+import PostPageLayout from "../../components/post-page-layout";
 
 export const meta = {
   isPublished: true,
@@ -9,7 +9,7 @@ export const meta = {
   url: `/consider-using-system-fonts`
 };
 
-export default Post;
+export default PostPageLayout;
 
 Next time you find yourself reaching for Google Fonts or Typekit, stop for a moment, and consider using system fonts. Defaulting to system fonts provides a performance boost and provides a comfortable, consistent experience for the end user. Loading a system font instead of a web font will save you at least one HTTP request and the headache of finding a nice looking font for your project. Try it out!
 
