--- a/src/pages/blog/create-a-bash-alias-for-a-terminal-command.mdx
+++ b/src/pages/blog/create-a-bash-alias-for-a-terminal-command.mdx
@@ -1,4 +1,4 @@
-import Post from "../../components/post";
+import PostPageLayout from "../../components/post-page-layout";
 
 export const meta = {
   isPublished: true,
@@ -9,7 +9,7 @@ export const meta = {
   url: `/create-a-bash-alias-for-a-terminal-command`
 };
 
-export default Post;
+export default PostPageLayout;
 
 Do you find yourself frequently typing out the same command in Terminal? One simple way to make your workflow more efficient is to create a Bash alias.
 
