--- a/src/pages/blog/css-stats-bookmarklet.mdx
+++ b/src/pages/blog/css-stats-bookmarklet.mdx
@@ -1,4 +1,4 @@
-import Post from "../../components/post";
+import PostPageLayout from "../../components/post-page-layout";
 
 export const meta = {
   isPublished: true,
@@ -9,7 +9,7 @@ export const meta = {
   url: `/css-stats-bookmarklet`
 };
 
-export default Post;
+export default PostPageLayout;
 
 [CSS Stats](http://cssstats.com) is a useful tool for getting a bird's eye view of the state of your website's CSS. By itself, it isn't anything particularly groundbreaking, but using the information it provides, you can get a feel for the quality of the CSS you have written.
 
