--- a/src/pages/blog/keep-your-css-cool-with-csscomb.mdx
+++ b/src/pages/blog/keep-your-css-cool-with-csscomb.mdx
@@ -1,4 +1,4 @@
-import Post from "../../components/post";
+import PostPageLayout from "../../components/post-page-layout";
 
 export const meta = {
   isPublished: true,
@@ -8,7 +8,7 @@ export const meta = {
   url: `/keep-your-css-cool-with-csscomb`
 };
 
-export default Post;
+export default PostPageLayout;
 
 For the past year, I have been using an extension called [CSScomb](http://csscomb.com/) to keep my CSS clean and consistent based on my own taste.
 
