--- a/src/pages/blog/move-files-to-the-root-of-a-nextjs-project.mdx
+++ b/src/pages/blog/move-files-to-the-root-of-a-nextjs-project.mdx
@@ -1,4 +1,4 @@
-import Post from "../../components/post";
+import PostPageLayout from "../../components/post-page-layout";
 
 export const meta = {
   isPublished: true,
@@ -8,7 +8,7 @@ export const meta = {
   url: `/move-files-to-the-root-of-a-nextjs-project`
 };
 
-export default Post;
+export default PostPageLayout;
 
 _Update: As of [v9.1](https://nextjs.org/blog/next-9-1), Next.js supports a `public` folder to define files to be mounted at the root of your application_
 
