--- a/src/pages/blog/optimize-your-prs-for-revertability.mdx
+++ b/src/pages/blog/optimize-your-prs-for-revertability.mdx
@@ -1,4 +1,4 @@
-import Post from "../../components/post";
+import PostPageLayout from "../../components/post-page-layout";
 
 export const meta = {
   isPublished: true,
@@ -8,7 +8,7 @@ export const meta = {
   url: `/optimize-your-prs-for-revertability`
 };
 
-export default Post;
+export default PostPageLayout;
 
 Imagine you've grabbed a GitHub issue called `Add a last name field to the signup form` from your issue backlog. While you're adding code to display a last name field, you realize that there's another React component named `Heder` instead of `Header`. You add the last name field, and you fix the spelling of `Header`. You submit a PR. Your teammates love the changes, and you merge them into master.
 
