--- a/src/pages/blog/solving-my-margin-headache.mdx
+++ b/src/pages/blog/solving-my-margin-headache.mdx
@@ -1,4 +1,4 @@
-import Post from "../../components/post";
+import PostPageLayout from "../../components/post-page-layout";
 
 export const meta = {
   isPublished: true,
@@ -8,7 +8,7 @@ export const meta = {
   url: `/solving-my-margin-headache`
 };
 
-export default Post;
+export default PostPageLayout;
 
 Throughout my attempted mastery of CSS, one of my most significant pain points has been dealing with margin between text elements. In this post, I will go over some of my previous approaches and the one approach I eventually landed on.
 
