--- a/src/pages/blog/an-adventure-in-image-zooming.mdx
+++ b/src/pages/blog/an-adventure-in-image-zooming.mdx
@@ -1,11 +1,10 @@
 import PostPageLayout from "../../components/post-page-layout";
 
 export const meta = {
-  isPublished: true,
+  isPublished: false,
   date: `2017-10-09`,
   title: `An adventure in image zooming`,
-  summary: `Learn how to use Zoom.js`,
-  url: `/an-adventure-in-image-zooming`
+  summary: `Learn how to use Zoom.js`
 };
 
 export default PostPageLayout;
