--- a/src/pages/blog/consider-using-system-fonts.mdx
+++ b/src/pages/blog/consider-using-system-fonts.mdx
@@ -1,12 +1,11 @@
 import PostPageLayout from "../../components/post-page-layout";
 
 export const meta = {
-  isPublished: true,
+  isPublished: false,
   date: `2017-07-16`,
   title: `Consider using system fonts`,
   summary: `Next time you find yourself reaching for Google Fonts or Typekit, stop for a
-  moment, and consider using system fonts`,
-  url: `/consider-using-system-fonts`
+  moment, and consider using system fonts`
 };
 
 export default PostPageLayout;
