--- a/src/pages/blog/create-a-bash-alias-for-a-terminal-command.mdx
+++ b/src/pages/blog/create-a-bash-alias-for-a-terminal-command.mdx
@@ -1,12 +1,11 @@
 import PostPageLayout from "../../components/post-page-layout";
 
 export const meta = {
-  isPublished: true,
+  isPublished: false,
   date: `2017-07-17`,
   title: `Create a Bash alias for a Terminal command`,
   summary: `Do you find yourself frequently typing out the same command in Terminal? One
-  simple way to make your workflow more efficient is to create a Bash alias.`,
-  url: `/create-a-bash-alias-for-a-terminal-command`
+  simple way to make your workflow more efficient is to create a Bash alias.`
 };
 
 export default PostPageLayout;
