--- a/src/pages/blog/keep-your-css-cool-with-csscomb.mdx
+++ b/src/pages/blog/keep-your-css-cool-with-csscomb.mdx
@@ -1,11 +1,10 @@
 import PostPageLayout from "../../components/post-page-layout";
 
 export const meta = {
-  isPublished: true,
+  isPublished: false,
   date: `2018-01-09`,
   title: `Keep your CSS cool with CSScomb`,
-  summary: `How to use CSScomb to keep your CSS clean and consistent`,
-  url: `/keep-your-css-cool-with-csscomb`
+  summary: `How to use CSScomb to keep your CSS clean and consistent`
 };
 
 export default PostPageLayout;
