--- a/src/pages/blog/move-files-to-the-root-of-a-nextjs-project.mdx
+++ b/src/pages/blog/move-files-to-the-root-of-a-nextjs-project.mdx
@@ -4,8 +4,7 @@ export const meta = {
   isPublished: true,
   date: `2019-09-02`,
   title: `Move files to the root of a Next.js project`,
-  summary: `Need to place a file like sitemap.xml in the root of your Next.js project? Here's one way to do it.`,
-  url: `/move-files-to-the-root-of-a-nextjs-project`
+  summary: `Need to place a file like sitemap.xml in the root of your Next.js project? Here's one way to do it.`
 };
 
 export default PostPageLayout;
