--- a/src/pages/blog/solving-my-margin-headache.mdx
+++ b/src/pages/blog/solving-my-margin-headache.mdx
@@ -4,8 +4,7 @@ export const meta = {
   isPublished: true,
   date: `2018-01-06`,
   title: `Solving my margin headache`,
-  summary: `An approach to dealing with margin between text elements in CSS`,
-  url: `/solving-my-margin-headache`
+  summary: `An approach to dealing with margin between text elements in CSS`
 };
 
 export default PostPageLayout;
