Change default tab to HTML on CodePen embeds

--- a/src/pages/blog/solving-my-margin-headache.mdx
+++ b/src/pages/blog/solving-my-margin-headache.mdx
@@ -18,7 +18,7 @@ First, I tried limiting myself to only using `margin-bottom`.
 <iframe
   height="500"
   scrolling="no"
-  src="//codepen.io/taylorbryant/embed/ppdOZN/?height=500&default-tab=js,result&embed-version=3&editable=true"
+  src="//codepen.io/taylorbryant/embed/ppdOZN/?height=500&default-tab=html,result&embed-version=3&editable=true"
   frameBorder="no"
   allowtransparency="true"
   allowFullScreen={true}
@@ -37,7 +37,7 @@ Second, I tried modifying my code to account for any edge cases using `:first-ch
 <iframe
   height="500"
   scrolling="no"
-  src="//codepen.io/taylorbryant/embed/YYEeMW/?height=500&default-tab=js,result&embed-version=3&editable=true"
+  src="//codepen.io/taylorbryant/embed/YYEeMW/?height=500&default-tab=html,result&embed-version=3&editable=true"
   frameBorder="no"
   allowtransparency="true"
   allowFullScreen={true}
@@ -56,7 +56,7 @@ By combining the `:not` selector with `:first-child` and `:last-child`, I was ab
 <iframe
   height="500"
   scrolling="no"
-  src="//codepen.io/taylorbryant/embed/dJZqjg/?height=500&default-tab=js,result&embed-version=3&editable=true"
+  src="//codepen.io/taylorbryant/embed/dJZqjg/?height=500&default-tab=html,result&embed-version=3&editable=true"
   frameBorder="no"
   allowtransparency="true"
   allowFullScreen={true}
