--- a/src/pages/blog/consider-using-system-fonts.mdx
+++ b/src/pages/blog/consider-using-system-fonts.mdx
@@ -5,7 +5,7 @@ export const meta = {
   date: `2017-07-16`,
   title: `Consider using system fonts`,
   summary: `Next time you find yourself reaching for Google Fonts or Typekit, stop for a
-  moment, and consider using system fonts`
+  moment, and consider using system fonts`,
 };
 
 export default PostPageLayout;
