--- a/src/pages/blog/optimize-your-prs-for-revertability.mdx
+++ b/src/pages/blog/optimize-your-prs-for-revertability.mdx
@@ -4,7 +4,7 @@ export const meta = {
   isPublished: true,
   date: `2020-01-26`,
   title: `Optimize your PRs for revertability`,
-  summary: `Any change unrelated to your work deserves its own PR`
+  summary: `Any change unrelated to your work deserves its own PR`,
 };
 
 export default PostPageLayout;
