--- a/src/pages/blog/create-a-bash-alias-for-a-terminal-command.mdx
+++ b/src/pages/blog/create-a-bash-alias-for-a-terminal-command.mdx
@@ -5,7 +5,7 @@ export const meta = {
   date: `2017-07-17`,
   title: `Create a Bash alias for a Terminal command`,
   summary: `Do you find yourself frequently typing out the same command in Terminal? One
-  simple way to make your workflow more efficient is to create a Bash alias.`
+  simple way to make your workflow more efficient is to create a Bash alias.`,
 };
 
 export default PostPageLayout;
