--- a/pages/blog/consider-using-system-fonts/index.mdx
+++ b/pages/blog/consider-using-system-fonts/index.mdx
@@ -1,10 +1,10 @@
-import PostPageLayout from "../../components/post-page-layout";
+import PostPageLayout from "../../../components/post-page-layout";
 
 export const meta = {
-  isPublished: false,
+  isPublished: true,
   date: `2017-07-16`,
   title: `Consider using system fonts`,
-  summary: `Next time you find yourself reaching for Google Fonts or Typekit, stop for a
+  description: `Next time you find yourself reaching for Google Fonts or Typekit, stop for a
   moment, and consider using system fonts`,
 };
 
