--- a/pages/blog/css-stats-bookmarklet/index.mdx
+++ b/pages/blog/css-stats-bookmarklet/index.mdx
@@ -1,10 +1,10 @@
-import PostPageLayout from "../../components/post-page-layout";
+import PostPageLayout from "../../../components/post-page-layout";
 
 export const meta = {
   isPublished: true,
   date: `2017-09-21`,
   title: `CSS Stats Bookmarklet`,
-  summary: `CSS Stats is a useful tool for getting a bird's eye view of the state of your
+  description: `CSS Stats is a useful tool for getting a bird's eye view of the state of your
   website's CSS`,
 };
 
