--- a/pages/blog/solving-my-margin-headache/index.mdx
+++ b/pages/blog/solving-my-margin-headache/index.mdx
@@ -1,10 +1,10 @@
-import PostPageLayout from "../../components/post-page-layout";
+import PostPageLayout from "../../../components/post-page-layout";
 
 export const meta = {
   isPublished: true,
   date: `2018-01-06`,
   title: `Solving my margin headache`,
-  summary: `An approach to dealing with margin between text elements in CSS`,
+  description: `An approach to dealing with margin between text elements in CSS`,
 };
 
 export default PostPageLayout;
