--- a/pages/blog/create-a-bash-alias-for-a-terminal-command/index.mdx
+++ b/pages/blog/create-a-bash-alias-for-a-terminal-command/index.mdx
@@ -1,10 +1,16 @@
-import PostPageLayout from "../../components/post-page-layout";
+import PostPageLayout from "../../../components/post-page-layout";
+import step1Image from "./step-1.png";
+import step2Image from "./step-2.png";
+import step3Image from "./step-3.png";
+import step4Image from "./step-4.png";
+import step5Image from "./step-5.png";
+import step6Image from "./step-6.png";
 
 export const meta = {
-  isPublished: false,
+  isPublished: true,
   date: `2017-07-17`,
   title: `Create a Bash alias for a Terminal command`,
-  summary: `Do you find yourself frequently typing out the same command in Terminal? One
+  description: `Do you find yourself frequently typing out the same command in Terminal? One
   simple way to make your workflow more efficient is to create a Bash alias.`,
 };
 
@@ -16,26 +22,26 @@ Do you find yourself frequently typing out the same command in Terminal? One sim
 
 Open your terminal emulator of choice. I use the macOS default **Terminal**.
 
-![Step 1](/images/blog/create-a-bash-alias-for-a-terminal-command/step-1.png)
+<img src={step1Image} alt="Step 1" />
 
 Type in the command `bash sudo nano .bash_profile` then press **Enter**. This command will open **.bash_profile** in the Nano text editor. You may be prompted for your password.
 
-![Step 2](/images/blog/create-a-bash-alias-for-a-terminal-command/step-2.png)
+<img src={step2Image} alt="Step 2" />
 
 Once **.bash_profile** is open, type in `alias` followed by the alias name you would like to use. Now, add an `=` sign and place the desired command between two `'` characters. In the example below, I created an alias called `youraliasname` and assigned it `cd cats/tabbies`.
 
-![Step 3](/images/blog/create-a-bash-alias-for-a-terminal-command/step-3.png)
+<img src={step3Image} alt="Step 3" />
 
 Press **CTRL+X** to exit Nano and save your changes to **.bash_profile**. If everything looks right, press **Y**.
 
-![Step 4](/images/blog/create-a-bash-alias-for-a-terminal-command/step-4.png)
+<img src={step4Image} alt="Step 4" />
 
 Nano will ask you to confirm the file name to write the changes to. Press **Enter** to overwrite the previous version of **.bash_profile**.
 
-![Step 5](/images/blog/create-a-bash-alias-for-a-terminal-command/step-5.png)
+<img src={step5Image} alt="Step 5" />
 
 Close and reopen **Terminal** (or your chosen emulator) to use your new alias. Test out your new alias by typing the alias name and pressing **Enter**.
 
-![Step 6](/images/blog/create-a-bash-alias-for-a-terminal-command/step-6.png)
+<img src={step6Image} alt="Step 6" />
 
 You're all set! 🚀
