--- a/pages/blog/keep-your-css-cool-with-csscomb/index.mdx
+++ b/pages/blog/keep-your-css-cool-with-csscomb/index.mdx
@@ -1,10 +1,12 @@
-import PostPageLayout from "../../components/post-page-layout";
+import PostPageLayout from "../../../components/post-page-layout";
+import exampleGif from "./example.gif";
+import installGif from "./install.gif";
 
 export const meta = {
-  isPublished: false,
+  isPublished: true,
   date: `2018-01-09`,
   title: `Keep your CSS cool with CSScomb`,
-  summary: `How to use CSScomb to keep your CSS clean and consistent`,
+  description: `How to use CSScomb to keep your CSS clean and consistent`,
 };
 
 export default PostPageLayout;
@@ -19,7 +21,7 @@ _Note: I use VS Code on macOS. However, these same principles apply to other tex
 
 Installing CSScomb is very easy. See below.
 
-![How to Install CSScomb](/images/blog/keep-your-css-cool-with-csscomb/install.gif)
+<img src={installGif} alt="How to install CSScomb" />
 
 ## Create a custom config file
 
@@ -42,6 +44,6 @@ Now, let's put this file to use:
 
 Open the command palette by navigating to **View** > **Command Palette...** or press `Shift` + `⌘` + `P`. In the command palette window, type `format` and click **CSSComb: Format Styles**.
 
-![How to Use CSScomb](/images/blog/keep-your-css-cool-with-csscomb/example.gif)
+<img src={exampleGif} alt="How to use CSScomb" />
 
 There you have it! If you anything is unclear or you just want to say hey, shoot me a message on Twitter ([@tayl_rbryant](https://twitter.com/tayl_rbryant)).
