--- a/pages/blog/move-files-to-the-root-of-a-nextjs-project/index.mdx
+++ b/pages/blog/move-files-to-the-root-of-a-nextjs-project/index.mdx
@@ -1,10 +1,10 @@
-import PostPageLayout from "../../components/post-page-layout";
+import PostPageLayout from "../../../components/post-page-layout";
 
 export const meta = {
   isPublished: true,
   date: `2019-09-02`,
   title: `Move files to the root of a Next.js project`,
-  summary: `Need to place a file like sitemap.xml in the root of your Next.js project? Here's one way to do it.`,
+  description: `Need to place a file like sitemap.xml in the root of your Next.js project? Here's one way to do it.`,
 };
 
 export default PostPageLayout;
