--- a/pages/blog/optimize-your-prs-for-revertability/index.mdx
+++ b/pages/blog/optimize-your-prs-for-revertability/index.mdx
@@ -1,10 +1,10 @@
-import PostPageLayout from "../../components/post-page-layout";
+import PostPageLayout from "../../../components/post-page-layout";
 
 export const meta = {
   isPublished: true,
   date: `2020-01-26`,
   title: `Optimize your PRs for revertability`,
-  summary: `Any change unrelated to your work deserves its own PR`,
+  description: `Any change unrelated to your work deserves its own PR`,
 };
 
 export default PostPageLayout;
