Make the website look better on desktop

--- a/pages/blog/create-a-bash-alias-for-a-terminal-command/index.mdx
+++ b/pages/blog/create-a-bash-alias-for-a-terminal-command/index.mdx
@@ -18,7 +18,7 @@ export default PostPageLayout;
 
 Do you find yourself frequently typing out the same command in Terminal? One simple way to make your workflow more efficient is to create a Bash alias.
 
-### Follow these simple steps
+## Follow these simple steps
 
 Open your terminal emulator of choice. I use the macOS default **Terminal**.
 
