Run linting and Prettier over codebase

--- a/pages/blog/an-adventure-in-image-zooming/index.mdx
+++ b/pages/blog/an-adventure-in-image-zooming/index.mdx
@@ -18,7 +18,7 @@ Zoom.js is a jQuery plugin built by [@fat](https://github.com/fat), a developer 
 
 You can see Zoom.js in action below.
 
-<img src={exampleGif} alt="Zoom.js example" />
+<img alt="Zoom.js example" src={exampleGif} />
 
 ## mehQuery
 
