--- a/pages/blog/create-a-bash-alias-for-a-terminal-command/index.mdx
+++ b/pages/blog/create-a-bash-alias-for-a-terminal-command/index.mdx
@@ -22,26 +22,26 @@ Do you find yourself frequently typing out the same command in Terminal? One sim
 
 Open your terminal emulator of choice. I use the macOS default **Terminal**.
 
-<img src={step1Image} alt="Step 1" />
+<img alt="Step 1" src={step1Image} />
 
 Type in the command `bash sudo nano .bash_profile` then press **Enter**. This command will open **.bash_profile** in the Nano text editor. You may be prompted for your password.
 
-<img src={step2Image} alt="Step 2" />
+<img alt="Step 2" src={step2Image} />
 
 Once **.bash_profile** is open, type in `alias` followed by the alias name you would like to use. Now, add an `=` sign and place the desired command between two `'` characters. In the example below, I created an alias called `youraliasname` and assigned it `cd cats/tabbies`.
 
-<img src={step3Image} alt="Step 3" />
+<img alt="Step 3" src={step3Image} />
 
 Press **CTRL+X** to exit Nano and save your changes to **.bash_profile**. If everything looks right, press **Y**.
 
-<img src={step4Image} alt="Step 4" />
+<img alt="Step 4" src={step4Image} />
 
 Nano will ask you to confirm the file name to write the changes to. Press **Enter** to overwrite the previous version of **.bash_profile**.
 
-<img src={step5Image} alt="Step 5" />
+<img alt="Step 5" src={step5Image} />
 
 Close and reopen **Terminal** (or your chosen emulator) to use your new alias. Test out your new alias by typing the alias name and pressing **Enter**.
 
-<img src={step6Image} alt="Step 6" />
+<img alt="Step 6" src={step6Image} />
 
 You're all set! 🚀
