--- a/pages/blog/keep-your-css-cool-with-csscomb/index.mdx
+++ b/pages/blog/keep-your-css-cool-with-csscomb/index.mdx
@@ -21,7 +21,7 @@ _Note: I use VS Code on macOS. However, these same principles apply to other tex
 
 Installing CSScomb is very easy. See below.
 
-<img src={installGif} alt="How to install CSScomb" />
+<img alt="How to install CSScomb" src={installGif} />
 
 ## Create a custom config file
 
@@ -44,6 +44,6 @@ Now, let's put this file to use:
 
 Open the command palette by navigating to **View** > **Command Palette...** or press `Shift` + `⌘` + `P`. In the command palette window, type `format` and click **CSSComb: Format Styles**.
 
-<img src={exampleGif} alt="How to use CSScomb" />
+<img alt="How to use CSScomb" src={exampleGif} />
 
 There you have it! If you anything is unclear or you just want to say hey, shoot me a message on Twitter ([@tayl_rbryant](https://twitter.com/tayl_rbryant)).
