--- a/pages/blog/generate-a-tailwind-css-spacing-scale/index.mdx
+++ b/pages/blog/generate-a-tailwind-css-spacing-scale/index.mdx
@@ -31,4 +31,6 @@ const generateSpacingScale = (numberOfSteps) =>
         : {}),
     };
   }, {});
+
+const spacing = generateSpacingScale(96);
 ```
