--- a/pages/blog/an-adventure-in-image-zooming/index.mdx
+++ b/pages/blog/an-adventure-in-image-zooming/index.mdx
@@ -1,8 +1,8 @@
-import PostPageLayout from "../../../components/post-page-layout";
+import PostPageLayout from "../../../components/PostPageLayout";
 import exampleGif from "./example.gif";
 
 export const meta = {
-  isPublished: true,
+  isPublished: false,
   date: `2017-10-09`,
   title: `An adventure in image zooming`,
   description: `Learn how to use Zoom.js`,
