--- a/pages/blog/consider-using-system-fonts/index.mdx
+++ b/pages/blog/consider-using-system-fonts/index.mdx
@@ -1,7 +1,7 @@
-import PostPageLayout from "../../../components/post-page-layout";
+import PostPageLayout from "../../../components/PostPageLayout";
 
 export const meta = {
-  isPublished: true,
+  isPublished: false,
   date: `2017-07-16`,
   title: `Consider using system fonts`,
   description: `Next time you find yourself reaching for Google Fonts or Typekit, stop for a
