--- a/pages/blog/css-stats-bookmarklet/index.mdx
+++ b/pages/blog/css-stats-bookmarklet/index.mdx
@@ -1,7 +1,7 @@
-import PostPageLayout from "../../../components/post-page-layout";
+import PostPageLayout from "../../../components/PostPageLayout";
 
 export const meta = {
-  isPublished: true,
+  isPublished: false,
   date: `2017-09-21`,
   title: `CSS Stats Bookmarklet`,
   description: `CSS Stats is a useful tool for getting a bird's eye view of the state of your
