--- a/pages/blog/keep-your-css-cool-with-csscomb/index.mdx
+++ b/pages/blog/keep-your-css-cool-with-csscomb/index.mdx
@@ -1,9 +1,9 @@
-import PostPageLayout from "../../../components/post-page-layout";
+import PostPageLayout from "../../../components/PostPageLayout";
 import exampleGif from "./example.gif";
 import installGif from "./install.gif";
 
 export const meta = {
-  isPublished: true,
+  isPublished: false,
   date: `2018-01-09`,
   title: `Keep your CSS cool with CSScomb`,
   description: `How to use CSScomb to keep your CSS clean and consistent`,
