--- a/pages/blog/create-a-bash-alias-for-a-terminal-command/index.mdx
+++ b/pages/blog/create-a-bash-alias-for-a-terminal-command/index.mdx
@@ -1,4 +1,4 @@
-import PostPageLayout from "../../../components/post-page-layout";
+import PostPageLayout from "../../../components/PostPageLayout";
 import step1Image from "./step-1.png";
 import step2Image from "./step-2.png";
 import step3Image from "./step-3.png";
@@ -7,7 +7,7 @@ import step5Image from "./step-5.png";
 import step6Image from "./step-6.png";
 
 export const meta = {
-  isPublished: true,
+  isPublished: false,
   date: `2017-07-17`,
   title: `Create a Bash alias for a Terminal command`,
   description: `Do you find yourself frequently typing out the same command in Terminal? One
