--- a/pages/blog/optimize-your-prs-for-revertability/index.mdx
+++ b/pages/blog/optimize-your-prs-for-revertability/index.mdx
@@ -1,7 +1,7 @@
-import PostPageLayout from "../../../components/post-page-layout";
+import PostPageLayout from "../../../components/PostPageLayout";
 
 export const meta = {
-  isPublished: true,
+  isPublished: false,
   date: `2020-01-26`,
   title: `Optimize your PRs for revertability`,
   description: `Any change unrelated to your work deserves its own PR`,
