--- a/pages/blog/my-goals-for-2021/index.mdx
+++ b/pages/blog/my-goals-for-2021/index.mdx
@@ -1,7 +1,7 @@
 import PostPageLayout from "../../../components/PostPageLayout";
 
 export const meta = {
-  isPublished: true,
+  isPublished: false,
   date: `2021-01-05`,
   title: `My goals for 2021`,
   description: `What's next for me in 2021`,
